# kroma

./: .gitignore  ARCHITECTURE.md  BETA.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  biome.json  package.json  sonar-project.properties  tsconfig.base.json  vitest.config.ts
.github/scripts/: androidtv-release-keystore.sh  ios-archive-export-ipa.sh  macos-check-signing-cert.sh  macos-sign-and-package-dmg.sh  publish-nightly.sh  publish-release.sh  resolve-version.sh
.github/workflows/: _release-desktop.yml  _release-mobile.yml  _release-modules.yml  _release-tv.yml  ci.yml  codeql.yml  desktop-autoupdate.yml  release.yml  repo-worker.yml  sonar.yml  spk.yml  synology.yml
clients/: tv-frame.vite.ts
clients/androidtv/: .gitignore  README.md  package.json  tv.target.ts  vite.config.ts
clients/bench/: index.html  main.tsx  package.json  tv.target.ts  vite.config.ts
clients/desktop/: README.md  package.json  vite.config.ts
clients/expo-build/: bundle-check.ts  metro-workspace.js
clients/mobile/: .gitignore  README.md  app.json  metro.config.js  package.json  tsconfig.json
clients/synology/: build.sh
clients/tizen/: .tizen.env.example  Makefile  README.md  SETUP.md  package.json  tv.target.ts  vite.config.ts
clients/tv-build/: check-legacy.ts  legacy-css.ts  legacy-finalize.ts  perf-bench.ts  perf-profile.ts  perf-session.ts  perf-tv.ts  polyfills.legacy.ts  rnw.ts  shell.ts
design/: LUMA.dc.html  SKILL.md  readme.md  styles.css
modules/: README.md  hello.module.md  module.schema.json
scripts/: build-wasm-module.ts  gen-modules.ts  gen-registry.ts  module-format.ts  new-module.ts  pack-module.ts  validate-modules.ts
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
server/crates/luma-http/: Cargo.toml
server/crates/luma-http/src/: lib.rs
server/crates/luma-module-kernel/: Cargo.toml
server/crates/luma-module-kernel/src/: lib.rs
(+861 files in other folders)
