[package]
name = "luma-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "HTTP transport over the system curl binary, shared by LUMA's acquisition stack"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
