[package]
name = "luma-module-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The server-side module kernel: the compile-time composition root that registers every module's manifest, collects their ServerModule behaviors, and drives the generic enable/disable + admin-mount lifecycle."
license.workspace = true

[dependencies]
# The app state + per-module enabled/config settings the kernel reads.
luma-engine = { workspace = true }
# The host seam: ServerModule / HostCtx contracts the kernel drives generically.
luma-module-host = { workspace = true }
# Module manifest primitives (Registry, EmbeddedModule, ModuleManifest).
luma-module-sdk = { workspace = true }
# Generated aggregator: registers every single-file (codegen) module.
luma-modules-generated = { workspace = true }

axum = { workspace = true }
tracing = { workspace = true }

# Every compile-time module whose MODULE manifest and/or server_module() the
# composition root names directly.
luma-indexer = { workspace = true }
luma-torrent = { workspace = true }
luma-torznab = { workspace = true }
luma-scene = { workspace = true }
luma-whisper = { workspace = true }
luma-vector = { workspace = true }
luma-mdns = { workspace = true }
luma-vpn = { workspace = true }
luma-remote = { workspace = true }
luma-transmission = { workspace = true }
luma-qbittorrent = { workspace = true }
